--- a/src/screens/Condiciones/styles.css
+++ b/src/screens/Condiciones/styles.css
@@ -21,8 +21,18 @@
   }
 
 
-@media (min-width: 360px) {
-.containerNavCondiciones {
+
+  .return {
+    font-size: 1em;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    font-family: 'Poppins-Light';
+    font-style: normal;
+    line-height: normal;
+  }
+  .containerNavCondiciones {
     z-index: 100;
     flex-direction: row;
     display: flex;
@@ -37,13 +47,6 @@
 }
 .return {
     font-size: 1em;
-    text-decoration: none;
-    color: white;
-    display: flex;
-    align-items: center;
-    font-family: 'Poppins-Light';
-    font-style: normal;
-    line-height: normal;
 }
 .containerSectionCond {
     display: flex;
@@ -82,7 +85,8 @@
     height: 900px;
     overflow-y: scroll;
 }
-}
+
+
 
 @media (min-width: 1201px) and (max-width: 1441px) {
 .containerNavCondiciones {
