--- a/src/screens/Condiciones/styles.css
+++ b/src/screens/Condiciones/styles.css
@@ -46,7 +46,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    align-items: flex-start;
+    align-items: center;
     padding: 10px 0px;
     gap: 1em;
 }
