--- a/src/components/Languaje/styles.css
+++ b/src/components/Languaje/styles.css
@@ -27,7 +27,7 @@
     cursor: pointer;
     z-index: 99;
     width: 100%;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .selectedLanguage {
