--- a/src/components/prensaComponent/styles.css
+++ b/src/components/prensaComponent/styles.css
@@ -1,26 +1,52 @@
-
-
-.prensaIcon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    cursor: pointer;
-    background-color: transparent;
-    border: 0px;
-    position: absolute;
-    top: 40%;
-    left: 90%;
-    right: 0;
-    z-index: 99;
+@font-face {
+  font-family: "Bebas";
+  src: url("../../fonts/BebasNeue-Regular.ttf");
+}
+@font-face {
+  font-family: "Poppins-Regular";
+  src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+}
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Poppins-Bold";
+  src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+}
+@font-face {
+  font-family: "Poppins-Light";
+  src: url("../../fonts/Poppins/Poppins-Light.ttf");
 }
 
+.prensaIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0px;
+  position: absolute;
+  top: 25%;
+  left: 90%;
+  right: 0;
+  z-index: 99;
+  text-decoration: none;
+}
+.prensaTextNav {
+    font-family: "Poppins-Regular";
+    font-size: 1em;
+    color: white;
+}
 .prensaIcon:hover {
-    color:  #62fee2;
+  color: #62fee2;
 }
 
 @media (max-width: 576px) {
-    .prensaIcon {
-        display: none;
-    }
+  .prensaIcon {
+    display: none;
+  }
+  .prensaTextNav {
+    display: none;
+  }
 }
