--- a/src/components/buttonComponent/styles.css
+++ b/src/components/buttonComponent/styles.css
@@ -45,18 +45,16 @@
   border-radius: 10px;
   cursor: pointer;
   text-align: center;
-  font-weight: 500;
   margin: 0px;
-  background: #1e1e1e;
-  color: white;
+  background: #62fee2;
+  color: #1e1e1e;
   border: 2px solid #62fee2;
 
-  font-family: "Poppins-Regular";
+  font-family: "Poppins-Medium";
   font-size: 1.3em;
-  font-weight: 500;
 }
 .buttonStyle:hover {
-  box-shadow: 0px 0px 7px 1px rgba(98, 254, 226, 1);
+  background-color: #62fee1b7;
 }
 
 /* .buttonStyle:hover {
@@ -81,7 +79,6 @@
     align-items: center;
     justify-content: center;
     font-size: 1em;
-    font-family: "Poppins-Regular";
   }
   .buttonStyle:hover {
     display: flex;
@@ -98,7 +95,6 @@
     align-items: center;
     justify-content: center;
     font-size: 1em;
-    font-family: "Poppins-Regular";
   }
   .buttonStyle:hover {
     display: flex;
@@ -115,7 +111,6 @@
     align-items: center;
     justify-content: center;
     font-size: 1.3em;
-    font-family: "Poppins-Regular";
   }
   .buttonStyle:hover {
     display: flex;
