--- a/src/components/Switch/styles.css
+++ b/src/components/Switch/styles.css
@@ -29,9 +29,9 @@
 }
 
 .css-ueukts-MuiButtonBase-root-MuiToggleButton-root.Mui-selected:hover {
-    /* background-color: #00ffe1c7 !important;
-    color: #1e1e1e !important; */
-    box-shadow: 0px 0px 7px 1px rgba(98, 254, 226, 1) !important;
+    background-color: #00ffe1c7 !important;
+    color: #1e1e1e !important;
+    /* box-shadow: 0px 0px 7px 1px rgba(98, 254, 226, 1) !important; */
 }
 
 .css-1hmmozd-MuiToggleButtonGroup-root {
